// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renderToText > matches snapshot for box-arrows.yaml 1`] = `
"

  ┌────────────┐          response
  │            │ ┌────────────────────────┐           ┌────────────┐
  │            ◀─┘          ┌────────────┐│           │            │
  │   Client   │   request  │             forward ────╴            │
  │            ╶────────────▶ Edge Proxy ╶──────┐     │   Server   │
  │            │            │            │      └─────▶            │
  └────────────┘            └────────────┘            │            │
                                                      └────────────┘

Nodes:
- client: Client
- proxy: Edge Proxy
- server: Server

Edges:
- client -> proxy: request
- proxy -> server: forward
- server -> client: response
"
`;

exports[`renderToText > matches snapshot for database.yaml 1`] = `
"

    ┌─────────────┐
    │             │
    │             ╶────┐
    │ Application │    │
    │             ╶────┼┐
    │             │    ││
    └──────╷──────┘    ││
   session lookup      ││writes
        ┌──┘           ││
  ┌─────▼─────┐        ││  ┌────────────────────┐
  │   Redis   │        ││  │                    │
  └───────────┘        └┼──▶ PostgreSQL Primary │
                  reads │  │                    │
                        │  └──────────╷─────────┘
                        │             │
                        │             │
                        │             │ streaming
                        │             │
                        │  ┌──────────▼─────────┐
                        │  │                    │
                        └──▶ PostgreSQL Replica │
                           │                    │
                           └────────────────────┘

Nodes:
- app: Application
- cache: Redis
- primary: PostgreSQL Primary
- replica: PostgreSQL Replica

Edges:
- app -> cache: session lookup
- app -> primary: writes
- app -> replica: reads
- primary -> replica: streaming
"
`;

exports[`renderToText > matches snapshot for flowchart.yaml 1`] = `
"

  ┌───────────┐
  │   Start   │
  └─────╷─────┘
        │
        │
        │
        │
        │
        │
 ┌──────▼─────┐
 │            │            ┌──────────┐
 │ Load Input ╶──────┐     │          │
 │            │      └─────▶          │
 └──────▲─────┘            │  Valid?  │
        │            ┌─────╴          │
        │            │     │          │
        │ retry      │     └─────╷────┘
        │            │           │
 ┌──────╵─────┐      │           │ yes
 │            │  no  │     ┌─────▼─────┐
 │   Reject   ◀──────┘     │           │
 │            │          ┌─╴  Process  │
 └────────────┘          │ │           │
                         │ └───────────┘
                         └──────────────┐
                                        │
                                        │
                                        │
                 ┌──────────┐           │
                 │          │           │
                 │   Done   ◀───────────┘
                 │          │
                 └──────────┘

Nodes:
- start: Start
- load: Load Input
- check: Valid?
- process: Process
- reject: Reject
- end: Done

Edges:
- check -> process: yes
- check -> reject: no
- reject -> load: retry
"
`;

exports[`renderToText > matches snapshot for infra.yaml 1`] = `
"

        ┌────────────┐
        │ Global DNS │
        └───╷─────╷──┘
            │     │
           ┌┘     │
           │      │ route
         ┌─┼──────┼───────────┐
         │ us-east└┐          │
         │ │       │          │
         │ │┌──────▼─────┐    │
         │ ││  VPC East  │    │
         │ │└──────╷─────┘    │
         │ │       │          │
         │ │       │          │
         │ │       │          │
         │ │       └┐         │
         │ │        │         │
         │ │        │         │
         │ │┌───────▼──────┐  │
         │ ││ Compute East │  │
         │ │└───────╷──────┘  │
         │ │        │         │
         │ │        │         │
         │ │        │         │
         │ │ route┌─┘         │
         │ │      │           │
         │ │      │           │
         │ │┌─────▼─────┐     │
         │ ││  DB East  │     │
         │ │└─────╷─────┘     │
         │ │      │           │
         └─┼──────└┼──────────┘
           │       │
           │       │
  ┌────────┼───────┼───┐
  │ us-west│       │   │
  │        │       │   │
  │        │       │   │
  │        │       │   │
  │        │       │   │
  │      replicate │   │
  │        │       │   │
  │        │       │   │
  │        │       │   │
  │        └┐      │   │
  │         │      │   │
  │  ┌──────▼─────┐│   │
  │  │  VPC West  ││   │
  │  └──────╷─────┘│   │
  │         │      └─┐ │
  │         │        │ │
  │         │        │ │
  │         └┐       │ │
  │          │       │ │
  │          │       │ │
  │  ┌───────▼──────┐│ │
  │  │ Compute West ││ │
  │  └───────╷──────┘│ │
  │          │       │ │
  │          │       │ │
  │          │       │ │
  │     ┌────┘       │ │
  │     │     ┌──────┘ │
  │     │     │        │
  │  ┌──▼─────▼──┐     │
  │  │  DB West  │     │
  │  └───────────┘     │
  │                    │
  └────────────────────┘

Nodes:
- dns: Global DNS
- vpc-east: VPC East
- compute-east: Compute East
- db-east: DB East
- vpc-west: VPC West
- compute-west: Compute West
- db-west: DB West

Groups:
- region-east: us-east
- region-west: us-west

Edges:
- dns -> vpc-east: route
- dns -> vpc-west: route
- db-east -> db-west: replicate
"
`;

exports[`renderToText > matches snapshot for microservice.yaml 1`] = `
"

    ┌────────────────────────────────────────────────────────────────────────┐
    │ Customer Experience                                                    │
    │                                                                        │
    │             ┌──────────────┐                            ┌───────────┐  │
    │             │              │                            │           │  │
    │             │ Notification │                            │    API    │  │
    │             │   Service    ◀─┐                    ┌─────╴  Gateway  │  │
    │             │              │ │                    │     │           │  │
    │             └──▲────▲───▲──┘ │                    │     └─────╷─────┘  │
    │                │    │   │    └────────────────────┼───────────┼────────┼─────┐
    │ ┌──────────────┼───┐┼───┘                         │           │        │     │
    │ │                  ││                             │           │        │     │
    │ │                  ││                             │           │        │     │
    │ │     ┌───────────┐││          ┌───────────┐      │     ┌─────▼────┐   │     │
    │ │     │           │││          │           │      │     │          │   │     │
    │ │     │   Cart    │││          │           ◀──────┘     │  Mobile  │   │     │
    │ │     │  Service  ◀┼┼────┐     │    Web    │      ┌─────╴   BFF    │   │     │
    │ │     │           │││    └─────╴    BFF    │      │     │          │   │     │
    │ │     └─╷───╷───▲─┘││          │           ╶──────┼┐    └─────╷────┘   │     │
    │ │       │   │   │  ││          │           │      ││          │        │     │
    │ │       │   └──┐│  ││          └─────╷─────┘      ││          │        │     │
    │ │       │      ││  ││                │            ││          │        │     │
    │ │       │      ││  ││                │            ││          │        │     │
    │ │┌──────▼─────┐││  ││          ┌─────▼─────┐      ││    ┌─────▼─────┐  │     │
    │ ││  Checkout  │││  ││          │           │      ││    │           │  │     │
    │ ││  Service   │││  ││receipts  │           ◀──────┘└────▶           │  │     │    featured
    │ │└───╷─────╷──┘││  ││          │   Auth    │            │  Catalog  │  │     │     items
    │ │    │     │   ││  ││        ┌─╴  Service  │            │  Service  ◀──┼─────┼─────────────────────────┐
    │ │    │     │   ││  ││        │ │           ╶─┐        ┌─╴           │  │     │                         │
    │ │    │     │   ││  ││        │ │           │ │        │ │           │  │     │                         │
    │ │    │     │   ││  ││        │ └───────────┘ │        │ └─────╷─────┘  │     │                         │
    │ │    │     │   ││ stock      └──────────────┐│        └───────┼──────┐ │     │                         │
    │ │    │     │   ││ sync────────────────┐     │└────────────────┼──────┼┐│     │                         │
    │ │    │     │   ││  │┌───────────┐     │     │┌─────────── login      │││     │                         │
    │ │    │     │   ││  ││           │     │     ││            events     │││     │ shipping                │
    │ │    │     │   ││  ││           ◀─────┼─────┘│           ◀────┼──────┘││     │ updates                 │
    │ │    │     │   ││  ││   Users   │     │      │  Search   │    │       ││     │                         │
    │ │    │ authorize│  ││  Service  │     │      │  Service  │    │       ││     │                         │
    └─┼────┼─────┼───┼┼──┼┼           ╶─┼───┼──────┼           ╶─┼──┼───────┼┘     │                         │
      │    │     │   ││  ││           │ │   │      │           │ └──┼──live─┼──────┼──┐                      │
      │    │     │   ││┌─┘└───────────┘ │   │      └───────────┘    │ prices│      │  │                      │
  ┌───┼────┼─────┼───┼┼┼────────────────┼───┼───────────────────────┼───────┼──────┼──┼──────────────────────┼────────────────────────────────┐
  │ Commerce Platform│││  place         └───┼───────────────────────┼───────┼─────┐│  │                      │                                │
  │   └────┼─────┼───┼┼┼─ order ────────────┼────────── preferences ┼──────┐│     ││  │                      │                                │
  │        │     └───┼┼┼───────────── async │                       │      ││     ││  │┌───────────┐         │                                │
  │        │         └┼┼─────────┐    alerts                        │      ││     ││  ││           │         │                                │
  │        │          └┼─────────┼┐   │     │  order                │      ││     ││  ││   Audit   │         │                                │
  │        │           │         ││   │     │ updates               │      │└─────┼┼──┼▶  Service  │         │                                │
  │        │           │         ││   │     │                       │      │      ││  ││           │         │                                │
  │     ┌──┘           │         ││   │     │                       │      │      ││  │└───────────┘         │                                │
  │     │              │         ││   │     │                       │      │      ││  │                      │                                │
  │     │              │         ││   │     │                 ┌─────┘      │      ││  │                      │                                │
  │     │              │         ││   │     │                 │            │      ││  │                      │                                │
  │     │              │         ││   │     │                 │            │      ││  │                      │                                │
  │     │              │         ││   │     │                 │            │      ││  │                      │                                │
  │     │              │         ││   │     │                 │            │      ││  │                      │                                │
  │     │              │         ││   │     │                 │            │      ││  │                      │                                │
  │     │              │         ││reserve  │                 │            │      ││  │           personalize                                 │
  │     │              │         ││ stock   │                 │            │      ││  └──────────────────────┼─────────┐                      │
  │     │              │         ││   │     │                 │            │      ││          ┌─────────────┐│         │ ┌─────────────────┐  │
  │     │              │         ││   │     │                 │            │      ││          │             ││         │ │                 │  │
  │     │ ┌───────────┐│         ││┌──▼─────╵──┐              │      ┌─────╵─────┐│└──────────╴             │└─────────┼─╴                 │  │
  │     │ │           ││         │││           │              │      │           ││           │             │          │ │                 │  │
  │     │ │  Config   ││     ┌───┼┼▶           │              │      │   Event   ││           │ Fulfillment │          └─▶                 │  │
  │     │ │  Service  ╶┼─────┘   │││  Orders   │              │      │    Bus    ╶┼┐        ┌─▶   Service   │            │ Recommendations │  │
  │     │ │           ││         │││  Service  ╶──────────────┼─────┐│           │││        │ │             │            │     Service     │  │
  │     │ └─────╷─────┘│   ┌─────┼┼╴           │              │     │└───────────┘││        ┌─╴             │          ┌─▶                 │  │
  │     │       │      │   │     │││           │              │     └─────────────┼┼────────┘ │             │          │ │                 │  │
  │     │       │      │   │     ││└─────╷─────┘       ┌──────┼───────────────────┼┘        │ └─────────────┘ ┌────────┼─╴                 │  │
  │     │   ┌───┌──────┘   │     │└──┐   │             │      │                   │         └────────────────┐│        │ │                 │  │
  │     │   │   │          │     │   │   │             │      │                   └──────────────────────────┼┼────────┘ └─────────────────┘  │
  │  ┌──▼───▼───╵─┐        │   ┌─▼───╵───▼─┐           │┌─────▼─────┐            ┌───────────┐               ││                               │
  │  │            │        │   │           │           ││           │            │           │               ││                               │
  │  │  Payments  │        │   │ Inventory │           ││  Pricing  │            │           ◀───────────────┘│                               │
  │  │  Service   ◀────────┘   │  Service  ╶───────────┼▶  Service  │            │ Analytics │                │                               │
  │  │            │            │           │           ││           │          ┌─▶  Service  │                │                               │
  └──└────────────┘────────────└───────────┘───────────┼└───────────┘──────────┼─┼           ◀─┐──────────────┼───────────────────────────────┘
                                                       └───────────────────────┘ │           │ └──────────────┘
                                                                                 └───────────┘

Nodes:
- gateway: API Gateway
- web-bff: Web BFF
- mobile-bff: Mobile BFF
- auth: Auth Service
- users: Users Service
- catalog: Catalog Service
- search: Search Service
- cart: Cart Service
- checkout: Checkout Service
- notifications: Notification Service
- orders: Orders Service
- payments: Payments Service
- inventory: Inventory Service
- pricing: Pricing Service
- fulfillment: Fulfillment Service
- analytics: Analytics Service
- recommendations: Recommendations Service
- event-bus: Event Bus
- config: Config Service
- audit: Audit Service

Groups:
- customer-experience: Customer Experience
- commerce-platform: Commerce Platform

Edges:
- checkout -> orders: place order
- checkout -> payments: authorize
- cart -> inventory: reserve stock
- catalog -> pricing: live prices
- search -> recommendations: personalize
- auth -> audit: login events
- users -> recommendations: preferences
- orders -> notifications: order updates
- payments -> notifications: receipts
- inventory -> cart: stock sync
- recommendations -> catalog: featured items
- event-bus -> notifications: async alerts
- fulfillment -> notifications: shipping updates
"
`;

exports[`renderToText > matches snapshot for minimal.yaml 1`] = `
"

  ┌───────────┐
  │    API    │
  └─────╷─────┘
        │
        │
        │
        │
        │
        │
  ┌─────▼────┐
  │ Database │
  └──────────┘

Nodes:
- api: API
- db: Database
"
`;

exports[`renderToTextFromSvg > matches snapshot for box-arrows.yaml 1`] = `
"


    ┌─────────┐
    │         │                                 ┌────────┐
    │         │┌───────── response ────┐        │        │
    │         ├◀                       │        │        │
    │         │          ┌────────────┐│        │ Server │
    │ Client  │          │            │└────────┤        │
    │         ├─ request▶┤ Edge Proxy ├ forward▶┤        │
    │         │          │            │         └────────┘
    │         │          └────────────┘
    └─────────┘

Nodes:
- client: Client
- proxy: Edge Proxy
- server: Server

Edges:
- client -> proxy: request
- proxy -> server: forward
- server -> client: response
"
`;

exports[`renderToTextFromSvg > matches snapshot for database.yaml 1`] = `
"


      ┌────────────────────┐
      │    Application     │
      └─┴──────────────┴─┴─┘
        │              │ └──────────────────────┐
        │              │                        reads
        session lookup └── writes ─┐            │
        ▼                          ▼            │
    ┌───┬───────────────┐ ┌────────┬───────────┐│
    │       Redis       │ │ PostgreSQL Primary ││
    └───────────────────┘ └────────┴───────────┘│
                                   streaming ┌──┘
                                   ▼         ▼
                                  ┌┬─────────┬─────────┐
                                  │ PostgreSQL Replica │
                                  └────────────────────┘

Nodes:
- app: Application
- cache: Redis
- primary: PostgreSQL Primary
- replica: PostgreSQL Replica

Edges:
- app -> cache: session lookup
- app -> primary: writes
- app -> replica: reads
- primary -> replica: streaming
"
`;

exports[`renderToTextFromSvg > matches snapshot for flowchart.yaml 1`] = `
"


     ┌────────────┐
     │   Start    │
     └───────┴────┘
             ▼
     ┌───────┬────┐
     │ Load Input │
     └─┴──────┴───┘
       ▲      └────────────▼
       │                 ┌─┬──────┐
       retry             │ Valid? │
       │                 └┴─┴─────┘
       │       ┌── no ────┘ yes
       │       ▼            ▼
    ┌──┬───────┬──────┐ ┌───┬──────┐
    │     Reject      │ │ Process  │
    └─────────────────┘ └───┴──────┘
                            ▼
                        ┌───┬──────┐
                        │   Done   │
                        └──────────┘

Nodes:
- start: Start
- load: Load Input
- check: Valid?
- process: Process
- reject: Reject
- end: Done

Edges:
- check -> process: yes
- check -> reject: no
- reject -> load: retry
"
`;

exports[`renderToTextFromSvg > matches snapshot for infra.yaml 1`] = `
"


        ┌──────────────────────────┐
        │        Global DNS        │
        └──────────┴───┴───────────┘
         ┌─────────┘   │
         │             route
         │             ▼
         │       ┌─────┬────────────┐
         │       │     VPC East     │
         │       └─────┴────────────┘
         │             ▼
         │       ┌─────┬────────────┐
         route   │   Compute East   │
         │       └─────┴────────────┘
         │             ▼
         │          ┌──┬──────────┐
         │          │   DB East   │
         │          └──┴──────────┘
         │             │
         └──────┐      │
                ▼      │
     ┌──────────┬─────┐│
     │    VPC West    ││
     └──────────┴─────┘│
                ▼      replicate
     ┌──────────┬─────┐│
     │  Compute West  ││
     └──────────┴─────┘│
                ▼ ▼────┘
       ┌────────┬─┬──┐
       │   DB West   │
       └─────────────┘

Nodes:
- dns: Global DNS
- vpc-east: VPC East
- compute-east: Compute East
- db-east: DB East
- vpc-west: VPC West
- compute-west: Compute West
- db-west: DB West

Groups:
- region-east: us-east
- region-west: us-west

Edges:
- dns -> vpc-east: route
- dns -> vpc-west: route
- db-east -> db-west: replicate
"
`;

exports[`renderToTextFromSvg > matches snapshot for microservice.yaml 1`] = `
"

   ┌──────────────────────────────────────────────────────────────┐               ┌────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
   │                                                              │               │       ┌───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐            │
   │                                                              │               │       │                ┌─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐                │            │
   │        ┌──────────────────────────────────────────────┐      │               │       │                │                                             ┌────────────────────────────────────────────────────────────┐              │                │            │
   │        │                                              │      ▼               ▼       ▼                ▼                                             │                                                            │              │                │            │
   │        │                                              │   ┌──┬───────────────┬───────┬────────────────┬─────┐    ┌─────────────────────────────┐    │                                                            │              │                │            │
   │        │                                              │   │              Notification Service               │    │         API Gateway         │    │                                                            │              │                │            │
   │        │                                              │   └─────────────────────────────────────────────────┘    └───────┴─────────────────┴───┘    │                                                            │              │                │            │
   │        │                                              │                                 ▼────────────────────────────────┘                 ▼        │                                                            │              │                │            │
   │        │                                              │                        ┌────────┬──────────────────┐         ┌─────────────────────┬───────┐│                                                            │              │                │            │
   │        │                                              │                        │          Web BFF          │         │         Mobile BFF          ││                                                            │              │                │            │
   │        │                                              │                        └───┴────┴──────────────┴───┘         └─────┴─────────────────┴─────┘│                                                            │              │                │            │
   │        │                                              │     ┌──────────────────────┘    │              │ ┌─────────────────┘                 │    ┌─┘                                                            │              │                │            │
   │        │                                              │     │                           │              │ │                                   │    │                                                              featured items │                │            │
   │        │                                              ▼     ▼                           ▼              └─▼──────────────────▼                ▼    ▼                                                              │              │                │            │
   │        │                            ┌─────────────────┬─────┬──┐                ┌───────┬────────────────┬────────┐    ┌────┬────────────────┬────┬───┐                                                          │              │                │            │
   │        │                            │       Cart Service       │                │          Auth Service           │    │       Catalog Service        │                                                          │              │                │            │
   │        │                            └─────────────────┴─────┴──┘                └───────┴────────────────┴────────┘    └──────────────────┴─────┴─────┘                                                          │              │                │            │
   │        │                           ┌──────────────────┘     │                 ┌─────────┼────────────────┼────────────────────────────────┘     │                                                                │              │                │            │
   │        │                           │                        │                 │  ┌──────┘                │                                      │                                                                │              │                │            │
   │        │                           ▼                        │                 │  │                       ▼                                      ▼                                                                │              shipping updates │            │
   │        │             ┌─────────────┬────────────────────┐   │                 │  │  ┌────────────────────┬─────────┐      ┌─────────────────────┬────────┐                                                       │              │                │            │
   │        │             │         Checkout Service         │   │                 │  │  │        Users Service         │      │        Search Service        │                                                       │              │                │            │
   │        │             └──┴───────────────────────────┴───┘   │                 │  │  └────────────────────┴─────────┘      └─────────────────────┴────────┘                                                       │              │                │            │
   │        │                │            ┌──────────────┼───────┘                 │  │                       │                                      │                                                                │              │                │            │
   │        │                │            │              │                         │  │                       │                                      │                                                                │              │                async alerts │
   receipts │                │            │              │                         │  │                       │                                      │                                                                │              │                │            │
   │        │                │            │              │                         │  │                       │                                      │                                                                │              │                │            │
   │        │                │            │              │                         │  │                       │                                      └──────────────────────────────────── personalize ──┐            │              │                │            │
   │        stock sync       │            │              │                         │  │                       └────────────────────────────────────────────────────── preferences ──────────────────────┐│            │              │                │            │
   │        │                │            │              │                         │  └────────────────────────────────────────── login events ──────────────────────────────────────────┐              ││            │              │                │            │
   │        │                │            │              │                         └───────── live prices ─────────────────────────────────────┐                                         │              ││            │              │                │            │
   │        │                │            │              └─────────── place order ─────────────────────────────────┐                           │                                         │              ││            │              │                │            │
   │        │                │            │                                                                        │                           │                                         │              ││            │              │                │            order updates
   │        │                │             reserve stock ────────────┐                                             │                           │                                         │              ││            │              │                │            │
   │        │                │                                       │                                             │                           │                                         │              ││            │              │                │            │
   │        │                authorize                               │                                             │                           │                                         ▼              ││            │              │                │            │
   │        │                │         ┌───────────────────────────┐ │                                             │                           │                                     ┌───┬─────────────┐││            │              │                │            │
   │        │                │         │      Config Service       │ │                                             │                           │                                     │  Audit Service  │││            │              │                │            │
   │        │                │         └──────────────────┴───┴────┘ │                                             │                           │                                     └─────────────────┘││            │              │                │            │
   │        │               ┌┼────────────────────────────┘   └──────┼────────────────────────────────────▼        ▼                           │                                                        ││            │              │                │            │
   │        │               ││                                       │                 ┌──────────────────┬────────┬──────┐                    │                                                        ││            │              │                │            │
   │        │               ││                                       │                 │          Orders Service          │                    │                                                        ││            │              │                │            │
   │        │               ││                                       │                 └────┴────────────────┴────┴──┴────┘                    │                                                        ││            │              │                │            │
   │        │              ┌┘│            ┌──────────────────────────┼──────────────────────┘                │    │  └─────────────────────────┼──────────────────────────────────┐                     ││            │              │                │            │
   │        │              ▼ ▼            ▼                          ▼                     ▼─────────────────┘    │                            │                                  ▼                     ▼▼            │              │                │            │
   │        │           ┌──┬─┬────────────┬─────────────────┐   ┌────┬─────────────────────┬───────────────────┐  │                            │ ┌─────────────┐  ┌───────────────┬─────┐ ┌─────────────┬┬──────────┐ │              │                │            │
   │        │           │         Payments Service          │   │              Inventory Service               │  │                            │ │  Event Bus  │  │ Fulfillment Service │ │ Recommendations Service │ │              │                │            │
   │        │           └────┴──────────────────────────────┘   └────┴─────────────────────┴───────────────────┘  │                            │ └────┴───┴────┘  └─┴───────────────┴───┘ └─────────────┴┴──────────┘ │              │                │            │
   │        │               ┌┼───────────────────────────────────────┘                     └──────────────────────┼──────────┐                 │      │   └──────┐ ┌┘               │                   ││            │              │                │            │
   │        │               ││                                                                                    │          ▼                 ▼      │          ▼ ▼ ▼──────────────┼───────────────────┘│            │              │                │            │
   │        │               ││                                                                                    │ ┌────────┬─────────────────┬───┐  │      ┌───┬─┬─┬─────────────┐│                    │            │              │                │            │
   │        │               ││                                                                                    │ │       Pricing Service        │  │      │  Analytics Service  ││                    │            │              │                │            │
   │        │               ││                                                                                    │ └──────────────────────────────┘  │      └─────────────────────┘│                    │            │              │                │            │
   │        │               ││                                                                                    │                                   │                             │                    │            │              │                │            │
   │        └───────────────┘│                                                                                    │                                   │                             │                    └────────────┘              │                │            │
   └─────────────────────────┘                                                                                    │                                   │                             └────────────────────────────────────────────────┘                │            │
                                                                                                                  │                                   └───────────────────────────────────────────────────────────────────────────────────────────────┘            │
                                                                                                                  └────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘

Nodes:
- gateway: API Gateway
- web-bff: Web BFF
- mobile-bff: Mobile BFF
- auth: Auth Service
- users: Users Service
- catalog: Catalog Service
- search: Search Service
- cart: Cart Service
- checkout: Checkout Service
- notifications: Notification Service
- orders: Orders Service
- payments: Payments Service
- inventory: Inventory Service
- pricing: Pricing Service
- fulfillment: Fulfillment Service
- analytics: Analytics Service
- recommendations: Recommendations Service
- event-bus: Event Bus
- config: Config Service
- audit: Audit Service

Groups:
- customer-experience: Customer Experience
- commerce-platform: Commerce Platform

Edges:
- checkout -> orders: place order
- checkout -> payments: authorize
- cart -> inventory: reserve stock
- catalog -> pricing: live prices
- search -> recommendations: personalize
- auth -> audit: login events
- users -> recommendations: preferences
- orders -> notifications: order updates
- payments -> notifications: receipts
- inventory -> cart: stock sync
- recommendations -> catalog: featured items
- event-bus -> notifications: async alerts
- fulfillment -> notifications: shipping updates
"
`;

exports[`renderToTextFromSvg > matches snapshot for minimal.yaml 1`] = `
"


    ┌──────────┐
    │   API    │
    └───┴──────┘
        ▼
    ┌───┬──────┐
    │ Database │
    └──────────┘

Nodes:
- api: API
- db: Database
"
`;
